--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mule.mulechain</groupId>
-    <artifactId>mulechain-web-crawler</artifactId>
+    <artifactId>mac-web-crawler</artifactId>
     <version>0.0.0-SNAPSHOT</version>
     <packaging>mule-extension</packaging>
-    <name>Mulechain-web-crawler Extension</name>
+    <name>mac-web-crawler Extension</name>
 
     <parent>
         <groupId>org.mule.extensions</groupId>
