--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,13 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.17.2</version>
-        </dependency>    </dependencies>
+        </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+	</dependencies>
 	<repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
