--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mule.mulechain</groupId>
     <artifactId>mac-web-crawler</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>mule-extension</packaging>
     <name>mac-web-crawler Extension</name>
 
