--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,24 @@
 			<version>2.15.2</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.mulesoft.munit</groupId>
+				<artifactId>munit-extensions-maven-plugin</artifactId>
+				<version>1.2.0</version>
+				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<phase>integration-test</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<scm>
 		<connection>scm:git:git@github.com:anypointcloud/mulesoft-web-crawler-connector.git</connection>
