--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mule.mulechain</groupId>
-    <artifactId>mac-web-crawler</artifactId>
+    <groupId>cloud.anypoint</groupId>
+    <artifactId>mule-web-crawler-connector</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>mule-extension</packaging>
     <name>MAC WebCrawler Connector</name>
@@ -78,9 +78,9 @@
 	</build>
 
 	<scm>
-		<connection>scm:git:git@github.com:anypointcloud/mulesoft-web-crawler-connector.git</connection>
-		<developerConnection>scm:git:git@github.com:anypointcloud/mulesoft-web-crawler-connector.git</developerConnection>
-		<url>https://github.com/anypointcloud/mulesoft-web-crawler-connector</url>
+		<connection>scm:git:git@github.com:anypointcloud/mule-web-crawler-connector.git</connection>
+		<developerConnection>scm:git:git@github.com:anypointcloud/mule-web-crawler-connector.git</developerConnection>
+		<url>https://github.com/anypointcloud/mule-web-crawler-connector</url>
 	</scm>
 
 	<distributionManagement>
