--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>cloud.anypoint</groupId>
     <artifactId>mule-web-crawler-connector</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>mule-extension</packaging>
     <name>MAC WebCrawler Connector</name>
 	<description>The MAC WebCrawler Connector enables a Mule application to crawl websites and retrieve content, potentially for creating vector embeddings for structured knowledge extraction.</description>
@@ -81,7 +79,8 @@
 		<connection>scm:git:git@github.com:anypointcloud/mule-web-crawler-connector.git</connection>
 		<developerConnection>scm:git:git@github.com:anypointcloud/mule-web-crawler-connector.git</developerConnection>
 		<url>https://github.com/anypointcloud/mule-web-crawler-connector</url>
-	</scm>
+	  <tag>0.1.0</tag>
+  </scm>
 
 	<distributionManagement>
 		<snapshotRepository>
